--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <nav>
         <div class="searchSection">
-          <a href="main.html"
+          <a href="index.html"
             ><img src="svg_icons/meetup_logo.svg" alt="mainLogo"
           /></a>
           <form action="#" class="searchBar">
@@ -92,7 +92,7 @@
         <section class="eventsNear">
           <div class="eventsNavigation">
             <div class="eventsLeft">
-              <h3>Events near</h3>
+              <h3 class="allTitleStyles">Events near</h3>
               <div class="locationTag">
                 <span class="locationName">Mountain View, CA</span>
                 <img src="svg_icons/pencil_icon.svg" alt="Edit location" />
@@ -126,7 +126,6 @@
                 </div>
               </div>
             </div>
-
             <div class="eventsElements">
               <img
                 class="eventImageStyles"
@@ -161,7 +160,7 @@
             <div class="eventsElements">
               <img
                 class="eventImageStyles"
-                src="img/near3.png"
+                src="img/event_near3.png"
                 alt="third event"
               />
               <div class="cardsInfo">
@@ -302,6 +301,210 @@
               </div>
             </div>
           </div>
+        </section>
+        <section class="upcomingEventsBlock">
+          <div class="upcomingAbout eventsNavigation">
+            <div class="eventsLeft">
+              <h3 class="allTitleStyles">Upcoming online events</h3>
+            </div>
+            <a class="seeAllLink navLogStyles upcomingAll" href="#"
+              >See all events</a
+            >
+          </div>
+          <div class="eventsList">
+            <div class="eventsElements">
+              <img
+                class="eventImageStyles"
+                src="img/upcoming1.webp.png"
+                alt="upcoming event 1"
+              />
+              <div class="cameraLogoEvents">
+                <img src="svg_icons/camera.svg" alt="cameraIcon" />
+                <p>Online Event</p>
+              </div>
+              <div class="cardsInfo">
+                <h3 class="eventTitle">
+                  Amazing On-Demand 15 Min Interviews with Top Coaches and
+                  Speakers
+                </h3>
+                <p class="eventDistance">Business (25 km)</p>
+                <div class="eventDate">
+                  <img src="svg_icons/calendar.svg" alt="calendar img" />
+                  <p class="eventDateInfo">Thu, Mar 14 · 6:00 PM PDT</p>
+                </div>
+                <div class="eventTickets">
+                  <div class="eventPeople">
+                    <img src="svg_icons/done.svg" alt="checked icon" />
+                    <p class="eventVisitors">3 going</p>
+                  </div>
+                  <div class="eventTicketInfo">
+                    <img src="svg_icons/ticket_icon.svg" alt="ticket icon" />
+                    <p class="ticketStatus">Free</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="eventsElements">
+              <img
+                class="eventImageStyles"
+                src="img/upcoming2.png"
+                alt="upcoming event 2"
+              />
+              <div class="cameraLogoEvents">
+                <img src="svg_icons/camera.svg" alt="cameraIcon" />
+                <p>Online Event</p>
+              </div>
+              <div class="cardsInfo">
+                <h3 class="eventTitle">Vision Pro Developers Online Meetup</h3>
+                <p class="eventDistance">Technology</p>
+                <div class="eventDate">
+                  <img src="svg_icons/calendar.svg" alt="calendar img" />
+                  <p class="eventDateInfo">Wed, Mar 13 · 7:00 PM PDT</p>
+                </div>
+                <div class="eventTickets">
+                  <div class="eventPeople">
+                    <img src="svg_icons/done.svg" alt="checked icon" />
+                    <p class="eventVisitors">51 going</p>
+                  </div>
+                  <div class="eventTicketInfo">
+                    <img src="svg_icons/ticket_icon.svg" alt="ticket icon" />
+                    <p class="ticketStatus">Free</p>
+                  </div>
+                </div>
+                <div class="onlineEvent">
+                  <img src="svg_icons/camera.svg" alt="camera icon" />
+                  <p class="onlineText">Online Event</p>
+                </div>
+              </div>
+            </div>
+            <div class="eventsElements">
+              <img
+                class="eventImageStyles"
+                src="img/upcoming3.png"
+                alt="upcoming event 3"
+              />
+              <div class="cameraLogoEvents">
+                <img src="svg_icons/camera.svg" alt="cameraIcon" />
+                <p>Online Event</p>
+              </div>
+              <div class="cardsInfo">
+                <h3 class="eventTitle">Significant Musical Moments</h3>
+                <p class="eventDistance">Hobbies and Passions (10 km)</p>
+                <div class="eventDate">
+                  <img src="svg_icons/calendar.svg" alt="calendar img" />
+                  <p class="eventDateInfo">Wed, Mar 13 · 6:00 PM PDT</p>
+                </div>
+                <div class="eventTickets">
+                  <div class="eventPeople">
+                    <img src="svg_icons/done.svg" alt="checked icon" />
+                    <p class="eventVisitors">16 going</p>
+                  </div>
+                  <div class="eventTicketInfo">
+                    <img src="svg_icons/ticket_icon.svg" alt="ticket icon" />
+                    <p class="ticketStatus">Free</p>
+                  </div>
+                </div>
+                <p class="attendees">99 attendees</p>
+              </div>
+            </div>
+            <div class="eventsElements">
+              <img
+                class="eventImageStyles"
+                src="img/upcoming4.png"
+                alt="upcoming event 4"
+              />
+              <div class="cameraLogoEvents">
+                <img src="svg_icons/camera.svg" alt="cameraIcon" />
+                <p>Online Event</p>
+              </div>
+              <div class="cardsInfo">
+                <h3 class="eventTitle">
+                  FREE Webinar : Introduction to Power BI
+                </h3>
+                <p class="eventDistance">Technology</p>
+                <div class="eventDate">
+                  <img src="svg_icons/calendar.svg" alt="calendar img" />
+                  <p class="eventDateInfo">Thu, Mar 14 · 5:30 PM PDT</p>
+                </div>
+                <div class="eventTickets">
+                  <div class="eventPeople">
+                    <img src="svg_icons/done.svg" alt="checked icon" />
+                    <p class="eventVisitors">33 going</p>
+                  </div>
+                  <div class="eventTicketInfo">
+                    <img src="svg_icons/ticket_icon.svg" alt="ticket icon" />
+                    <p class="ticketStatus">Free</p>
+                  </div>
+                </div>
+                <p class="attendees">99 attendees</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-------------------------------- Join Meetup section  ------------------------------->
+        <section class="joinMeetupBlock">
+          <div class="meetupInfo">
+            <h3 class="allTitleStyles">Join Meetup</h3>
+            <!-- Мобильная версия картинки -->
+            <img
+              class="mobileImage"
+              src="svg_icons/hands_logo.svg"
+              alt="meetup image"
+            />
+            <p>
+              People use Meetup to meet new people, learn new things, find
+              support, get out of their comfort zones, and pursue their
+              passions, together. Membership is free.
+            </p>
+
+            <a class="mainBtnStyles meetUpBtn" href="events.html" role="button"
+              >Sign up</a
+            >
+          </div>
+          <!-- Десктопная версия картинки -->
+          <img
+            class="desktopImage"
+            src="svg_icons/hands_logo.svg"
+            alt="meetup image"
+          />
+        </section>
+        <!-------------------------------- explore categories section  ------------------------------->
+        <section class="topCategoriesBlock">
+          <h3 class="allTitleStyles">Explore top categories</h3>
+          <ul>
+            <li>
+              <img src="svg_icons/explore1.svg" alt="explore1" />
+              <p>Travel and Outdoor</p>
+            </li>
+            <li>
+              <img src="svg_icons/explore2.svg" alt="explore2" />
+              <p>Travel and Outdoor</p>
+            </li>
+            <li>
+              <img src="svg_icons/explore3.svg" alt="explore3" />
+              <p>Travel and Outdoor</p>
+            </li>
+            <li>
+              <img src="svg_icons/explore4.svg" alt="explore4" />
+              <p>Travel and Outdoor</p>
+            </li>
+            <li>
+              <img src="svg_icons/explore5.svg" alt="explore5" />
+              <p>Travel and Outdoor</p>
+            </li>
+            <li>
+              <img src="svg_icons/explore6.svg" alt="explore6" />
+              <p>Travel and Outdoor</p>
+            </li>
+            <li>
+              <img src="svg_icons/explore7.svg" alt="explore7" />
+              <p>Travel and Outdoor</p>
+            </li>
+            <li>
+              <img src="svg_icons/explore8.svg" alt="explore8" />
+              <p>Travel and Outdoor</p>
+            </li>
+          </ul>
         </section>
       </main>
     </div>
