finished all sections with footer + adaptive

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         </form>
       </div>
       <main>
+        <!-------------------------------- intro section  ------------------------------->
         <section class="intro">
           <div class="joinInfo">
             <h1>The people platform—Where interests become friendships</h1>
@@ -89,6 +90,7 @@
             <img src="svg_icons/intro_img.svg" alt="intro_img" />
           </div>
         </section>
+        <!-------------------------------- near events section  ------------------------------->
         <section class="eventsNear">
           <div class="eventsNavigation">
             <div class="eventsLeft">
@@ -302,6 +304,7 @@
             </div>
           </div>
         </section>
+        <!-------------------------------- upcoming events section  ------------------------------->
         <section class="upcomingEventsBlock">
           <div class="upcomingAbout eventsNavigation">
             <div class="eventsLeft">
@@ -506,7 +509,232 @@
             </li>
           </ul>
         </section>
+        <!-------------------------------- popular cities section  ------------------------------->
+        <section class="cities">
+          <h3 class="allTitleStyles">Popular cities on Meetup</h3>
+          <p>
+            Looking for fun things to do near you? See what Meetup organizers
+            are planning in cities around the country.
+          </p>
+          <div class="citiesCards">
+            <a class="cityElement" href="#">
+              <img src="img/city1.png" alt="New York" />
+              <p class="citiesName">New York</p>
+            </a>
+            <a class="cityElement" href="#">
+              <img src="img/city2.png" alt="San Francisco" />
+              <p class="citiesName">San Francisco</p>
+            </a>
+            <a class="cityElement" href="#">
+              <img src="img/city3.png" alt="Chicago" />
+              <p class="citiesName">Chicago</p>
+            </a>
+            <a class="cityElement" href="#">
+              <img src="img/city4.png" alt="Nashville" />
+              <p class="citiesName">Nashville</p>
+            </a>
+            <a class="cityElement" href="#">
+              <img src="img/city5.png" alt="Miami" />
+              <p class="citiesName">Miami</p>
+            </a>
+          </div>
+        </section>
+        <!-------------------------------- how section  ------------------------------->
+        <section class="howMeetupBlock">
+          <h3 class="allTitleStyles">How Meetup works</h3>
+          <div class="howInfos">
+            <div class="howDiscover">
+              <img src="svg_icons/tile_search.svg" alt="tile search icon" />
+              <div class="howDiscoverInfos">
+                <h4>Discover events and groups</h4>
+                <p>
+                  See who's hosting local events for all the things you love
+                </p>
+                <a class="seeAllLink" href="#">Search events and groups</a>
+              </div>
+            </div>
+            <div class="howDiscover">
+              <img src="svg_icons/tile_plus.svg" alt="tile plus icon" />
+              <div class="howDiscoverInfos">
+                <h4>Start a group to host events</h4>
+                <p>
+                  Create your own Meetup group, and draw from a community of
+                  millions
+                </p>
+                <a class="seeAllLink" href="#">Start a group</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-------------------------------- friendships section  ------------------------------->
+        <section class="friendships">
+          <h3 class="allTitleStyles">Friendships are made on Meetup</h3>
+          <p>
+            Since 2002, members have used Meetup to make new friends, meet
+            like-minded people, spend time on hobbies, and connect with locals
+            over shared interests. Learn how.
+          </p>
+          <div class="friendshipsCards">
+            <div class="friendshipsElements">
+              <img src="img/firendships1.png" alt="firendships1" />
+              <h4>I Used Meetup to Make Friends at Brunch</h4>
+              <p>
+                New Jersey-based writer and college student Brianna Stryker
+                wanted to meet friends in her hometown. Learn how she used
+                Meetup to make connections by joining a Girls Night Out Meetup
+                group.
+              </p>
+              <a class="seeAllLink" href="#">Read more</a>
+            </div>
+            <div class="friendshipsElements">
+              <img src="img/friendships2.png" alt="firendships2" />
+              <h4>How to Turn Casual Connections into Close Friendships</h4>
+              <p>
+                It’s proven that close friendships are harder to make as an
+                adult. But don’t sweat it: here’s what you can do to simplify
+                the process.
+              </p>
+              <a class="seeAllLink" href="#">Read more</a>
+            </div>
+            <div class="friendshipsElements">
+              <img src="img/friendships3.png" alt="firendships3" />
+              <h4>Do You Have the “Right” Number of Friends?</h4>
+              <p>
+                Studies from around the world have tried to help people answer
+                this question. Learn about the three tiers of friendship and how
+                to fulfill them.
+              </p>
+              <a class="seeAllLink" href="#">Read more</a>
+            </div>
+          </div>
+        </section>
       </main>
+      <footer>
+        <div class="footerContainer">
+          <div class="footerStarted">
+            <p class="footerListTitle">Create your own Meetup group.</p>
+            <a role="button" href="#">Get Started</a>
+          </div>
+          <div class="footerLists">
+            <ul class="footerListsStyle">
+              <li class="footerListTitle">Your Account</li>
+              <li><a class="footerListStyles" href="#">Sign up</a></li>
+              <li><a class="footerListStyles" href="#">Log in</a></li>
+              <li><a class="footerListStyles" href="#">Help</a></li>
+              <li>
+                <a class="footerListStyles" href="#">Become an Affiliate</a>
+              </li>
+            </ul>
+            <ul class="footerListsStyle">
+              <li class="footerListTitle">Discover</li>
+              <li><a class="footerListStyles" href="#">Groups</a></li>
+              <li><a class="footerListStyles" href="#">Calendar</a></li>
+              <li><a class="footerListStyles" href="#">Topics</a></li>
+              <li>
+                <a class="footerListStyles" href="#">Cities</a>
+              </li>
+              <li><a class="footerListStyles" href="#">Online Events</a></li>
+              <li><a class="footerListStyles" href="#">Local Guides</a></li>
+              <li><a class="footerListStyles" href="#">Make Friends</a></li>
+            </ul>
+            <ul class="footerListsStyle">
+              <li class="footerListTitle">Meetup</li>
+              <li><a class="footerListStyles" href="#">About</a></li>
+              <li><a class="footerListStyles" href="#">Blog</a></li>
+              <li><a class="footerListStyles" href="#">Meetup Pro</a></li>
+              <li>
+                <a class="footerListStyles" href="#">Careers</a>
+              </li>
+              <li><a class="footerListStyles" href="#">Apps</a></li>
+              <li><a class="footerListStyles" href="#">Podcast</a></li>
+            </ul>
+          </div>
+          <div class="socialmedias">
+            <div class="followBlock">
+              <p>Follow us</p>
+              <div class="socialmediasIcons">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  aria-label="Facebook"
+                >
+                  <img src="svg_icons/facebook.svg" alt="facebook icon" />
+                </a>
+                <a
+                  href="https://www.twitter.com"
+                  target="_blank"
+                  aria-label="Twitter"
+                >
+                  <img src="svg_icons/tritter.svg" alt="twitter icon" />
+                </a>
+                <a
+                  href="https://www.youtube.com"
+                  target="_blank"
+                  aria-label="YouTube"
+                >
+                  <img src="svg_icons/youtube.svg" alt="youtube icon" />
+                </a>
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  aria-label="Instagram"
+                >
+                  <img src="svg_icons/instagram.svg" alt="instagram icon" />
+                </a>
+                <a
+                  href="https://www.tiktok.com"
+                  target="_blank"
+                  aria-label="TikTok"
+                >
+                  <img src="svg_icons/tiktok.svg" alt="tiktok icon" />
+                </a>
+              </div>
+            </div>
+            <div class="downloadApps">
+              <a
+                href="https://play.google.com/store"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="svg_icons/google_play.svg" alt="Google Play icon" />
+              </a>
+              <a
+                href="https://www.apple.com/app-store/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="svg_icons/apple.svg" alt="Apple Store icon" />
+              </a>
+            </div>
+          </div>
+          <ul class="footerSettings">
+            <li><a href="#">© 2024 Meetup</a></li>
+            <li>
+              <a class="footerListStyles footerSettingsList" href="#"
+                >Terms of Service</a
+              >
+            </li>
+            <li>
+              <a class="footerListStyles footerSettingsList" href="#"
+                >Privacy Policy</a
+              >
+            </li>
+            <li>
+              <a class="footerListStyles footerSettingsList" href="#"
+                >Do Not Sell or Share My Personal Data</a
+              >
+            </li>
+            <li>
+              <a class="footerListStyles footerSettingsList" href="#"
+                >Cookie Policy</a
+              >
+            </li>
+            <li>
+              <a class="footerListStyles footerSettingsList" href="#">Help</a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
