--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 src="img/event_near3.png"
                 alt="third event"
               />
-              <div class="cardsInfo">
+              <div class="cardsInfo filteredCardsInfo">
                 <h3 class="eventTitle">
                   Tech Talks & Quiz: Next- Gen Database Solutions for Emerging
                   Use Cases
