Added filters and finished adaptive

--- a/events.html
+++ b/events.html
@@ -78,27 +78,38 @@
             <p class="sectionLabel">Events</p>
             <form class="filtersForm">
               <div class="selectList">
+                <select class="mySelect selectDate">
+                  <option>Any date</option>
+                  <option value="2024-03-23">2024-03-23</option>
+                  <option value="2024-03-16">2024-03-16</option>
+                  <option value="2024-03-13">2024-03-13</option>
+                  <option value="2024-03-14">2024-03-16</option>
+                </select>
                 <select class="mySelect selectType">
-                  <option disabled selected>Any type</option>
-                  <option>online</option>
-                  <option>offline</option>
+                  <option>Any type</option>
+                  <option value="online">online</option>
+                  <option value="offline">offline</option>
                 </select>
                 <select class="mySelect selectDistance">
-                  <option disabled selected>Any distance</option>
-                  <option>50</option>
-                  <option>25</option>
-                  <option>10</option>
-                  <option>100</option>
-                  <option>74</option>
-                  <option>15</option>
+                  <option>Any distance</option>
+                  <option value="50">50</option>
+                  <option value="25">25</option>
+                  <option value="10">10</option>
+                  <option value="100">100</option>
+                  <option value="74">74</option>
+                  <option value="15">15</option>
                 </select>
                 <select class="mySelect selectCategory">
-                  <option disabled selected>Any category</option>
-                  <option>Hobbies and Passions</option>
-                  <option>Technology</option>
-                  <option>Business</option>
-                  <option>Social Activities</option>
-                  <option>Health and Wellbeing</option>
+                  <option>Any category</option>
+                  <option value="Hobbies and Passions">
+                    Hobbies and Passions
+                  </option>
+                  <option value="Technology">Technology</option>
+                  <option value="Business">Business</option>
+                  <option value="Social Activities">Social Activities</option>
+                  <option value="Health and Wellbeing">
+                    Health and Wellbeing
+                  </option>
                 </select>
               </div>
             </form>
